--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,59 @@ jobs:
     name: E2E Tests
     runs-on: ubuntu-24.04
     needs: lint
+
+    services:
+      minio:
+        image: minio/minio:latest
+        env:
+          MINIO_ROOT_USER: minioadmin
+          MINIO_ROOT_PASSWORD: minioadmin
+        ports:
+          - 9000:9000
+          - 9001:9001
+        options: >-
+          --health-cmd "curl -f http://localhost:9000/minio/health/live || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          --entrypoint minio
+        # MinIO command passed via entrypoint override (server /data --console-address ":9001" is default)
+
     container:
       image: node:24-slim
+      options: --network-alias test-runner
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install curl for MinIO setup
+        run: apt-get update && apt-get install -y curl
+
+      - name: Wait for MinIO to be ready
+        run: |
+          echo "Waiting for MinIO to be ready..."
+          for i in $(seq 1 30); do
+            if curl -f http://minio:9000/minio/health/live > /dev/null 2>&1; then
+              echo "MinIO is ready!"
+              break
+            fi
+            echo "Attempt $i/30: MinIO not ready yet..."
+            sleep 2
+          done
+
+      - name: Install MinIO Client (mc)
+        run: |
+          curl -fsSL https://dl.min.io/client/mc/release/linux-amd64/mc -o /usr/local/bin/mc
+          chmod +x /usr/local/bin/mc
+          mc --version
+
+      - name: Configure MinIO and create bucket
+        run: |
+          mc alias set myminio http://minio:9000 minioadmin minioadmin
+          mc mb myminio/downloads --ignore-existing || true
+          mc anonymous set download myminio/downloads
+          echo "MinIO bucket 'downloads' created and configured"
 
       - name: Install dependencies
         run: npm ci
@@ -41,10 +89,14 @@ jobs:
       - name: Run E2E tests
         run: npm run test:e2e
         env:
+          CI: "true"
           NODE_ENV: development
           PORT: 3000
           S3_REGION: us-east-1
-          S3_BUCKET_NAME: ""
+          S3_ENDPOINT: http://minio:9000
+          S3_ACCESS_KEY_ID: minioadmin
+          S3_SECRET_ACCESS_KEY: minioadmin
+          S3_BUCKET_NAME: downloads
           S3_FORCE_PATH_STYLE: "true"
           SENTRY_DSN: ""
           OTEL_EXPORTER_OTLP_ENDPOINT: ""
@@ -52,6 +104,8 @@ jobs:
           RATE_LIMIT_WINDOW_MS: "60000"
           RATE_LIMIT_MAX_REQUESTS: "100"
           CORS_ORIGINS: "*"
+          DOWNLOAD_DELAY_MIN_MS: "100"
+          DOWNLOAD_DELAY_MAX_MS: "500"
 
   build:
     name: Build Docker Image
@@ -64,12 +118,77 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: delineate-hackathon-challenge
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: docker/Dockerfile.prod
           push: false
-          tags: delineate-hackathon-challenge:${{ github.sha }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            BUILD_DATE=${{ github.event.head_commit.timestamp }}
+            VCS_REF=${{ github.sha }}
+
+      - name: Test Docker image health
+        run: |
+          # Start MinIO for testing
+          docker run -d --name test-minio \
+            -p 9000:9000 \
+            -e MINIO_ROOT_USER=minioadmin \
+            -e MINIO_ROOT_PASSWORD=minioadmin \
+            minio/minio:latest server /data
+          
+          # Wait for MinIO
+          sleep 3
+          
+          # Start application container
+          docker run -d --name test-container \
+            -p 3000:3000 \
+            --link test-minio:minio \
+            -e NODE_ENV=production \
+            -e S3_ENDPOINT=http://minio:9000 \
+            -e S3_ACCESS_KEY_ID=minioadmin \
+            -e S3_SECRET_ACCESS_KEY=minioadmin \
+            -e S3_BUCKET_NAME=downloads \
+            -e S3_REGION=us-east-1 \
+            -e S3_FORCE_PATH_STYLE=true \
+            -e PORT=3000 \
+            delineate-hackathon-challenge:sha-${{ github.sha }}
+          
+          # Wait for container to be ready
+          sleep 8
+          
+          # Test health endpoint
+          curl -f http://localhost:3000/health || (docker logs test-container && exit 1)
+          
+          # Cleanup
+          docker stop test-container test-minio
+          docker rm test-container test-minio
+
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: delineate-hackathon-challenge:sha-${{ github.sha }}
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Upload Trivy scan results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
