--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,10 +151,10 @@ jobs:
             -e MINIO_ROOT_USER=minioadmin \
             -e MINIO_ROOT_PASSWORD=minioadmin \
             minio/minio:latest server /data
-          
+
           # Wait for MinIO
           sleep 3
-          
+
           # Start application container
           docker run -d --name test-container \
             -p 3000:3000 \
@@ -168,13 +168,13 @@ jobs:
             -e S3_FORCE_PATH_STYLE=true \
             -e PORT=3000 \
             delineate-hackathon-challenge:sha-${{ github.sha }}
-          
+
           # Wait for container to be ready
           sleep 8
-          
+
           # Test health endpoint
           curl -f http://localhost:3000/health || (docker logs test-container && exit 1)
-          
+
           # Cleanup
           docker stop test-container test-minio
           docker rm test-container test-minio
@@ -183,12 +183,12 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: delineate-hackathon-challenge:sha-${{ github.sha }}
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          format: "sarif"
+          output: "trivy-results.sarif"
+          severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy scan results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: "trivy-results.sarif"
