--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,12 +40,10 @@ jobs:
           - 9000:9000
           - 9001:9001
         options: >-
-          --health-cmd "curl -f http://localhost:9000/minio/health/live || exit 1"
+          --health-cmd "mc ready local"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-          --entrypoint minio
-        # MinIO command passed via entrypoint override (server /data --console-address ":9001" is default)
 
     container:
       image: node:24-slim
