--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main, master]
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   lint:
     name: Lint
@@ -109,16 +113,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: delineate-hackathon-challenge
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
+      - name: Set image tag
+        id: tag
+        run: echo "image_tag=delineate-hackathon-challenge:${{ github.sha }}" >> $GITHUB_OUTPUT
 
       - name: Build Docker image
         uses: docker/build-push-action@v6
@@ -126,13 +123,10 @@ jobs:
           context: .
           file: docker/Dockerfile.prod
           push: false
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.tag.outputs.image_tag }}
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          build-args: |
-            BUILD_DATE=${{ github.event.head_commit.timestamp }}
-            VCS_REF=${{ github.sha }}
 
       - name: Test Docker image health
         run: |
@@ -158,7 +152,7 @@ jobs:
             -e S3_REGION=us-east-1 \
             -e S3_FORCE_PATH_STYLE=true \
             -e PORT=3000 \
-            delineate-hackathon-challenge:sha-${{ github.sha }}
+            ${{ steps.tag.outputs.image_tag }}
 
           # Wait for container to be ready
           sleep 8
@@ -171,16 +165,18 @@ jobs:
           docker rm test-container test-minio
 
       - name: Scan Docker image for vulnerabilities
+        continue-on-error: true
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: delineate-hackathon-challenge:sha-${{ github.sha }}
+          image-ref: ${{ steps.tag.outputs.image_tag }}
           format: "sarif"
           output: "trivy-results.sarif"
           severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy scan results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        continue-on-error: true
+        uses: github/codeql-action/upload-sarif@v4
+        if: always() && hashFiles('trivy-results.sarif') != ''
         with:
           sarif_file: "trivy-results.sarif"
 
