--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -63,10 +63,10 @@ services:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: http://${VM_IP:-36.255.71.37}:3000
     ports:
       - "5173:5173"
-    environment:
-      - VITE_API_URL=http://${VM_IP:-localhost}:3000
     depends_on:
       - delineate-app
     restart: unless-stopped
