--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,10 @@ RUN npm install
 
 COPY . .
 
+# Set build-time environment variable
+ARG VITE_API_URL
+ENV VITE_API_URL=${VITE_API_URL}
+
 EXPOSE 5173
 
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
