--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -11,6 +11,7 @@ services:
       - ../.env
     environment:
       - NODE_ENV=production
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://delineate-jaeger:4318
       - S3_ENDPOINT=http://delineate-minio:9000
       - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
       - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
@@ -20,6 +21,8 @@ services:
     depends_on:
       delineate-minio:
         condition: service_healthy
+      delineate-jaeger:
+        condition: service_started
     restart: unless-stopped
     networks:
       - delineate-network
@@ -56,6 +59,17 @@ services:
       mc anonymous set download myminio/downloads;
       echo 'MinIO bucket setup complete';
       "
+    networks:
+      - delineate-network
+
+  delineate-jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "4318:4318"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    restart: unless-stopped
     networks:
       - delineate-network
 
